--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,7 @@ name: HitomiPlugin
 version: 1.0-dev
 api-version: 1.20
 author: Auuki
+commands:
+  hitomi:
+    description: Main command for hitomi plugin
+    permission: hitomi.commands
